tigergraph-server/4.2/reference/patents-and-third-party-software.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software)[Next](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
  *     * [TigerGraph DB Release Notes](https://docs.tigergraph.com/tigergraph-server/4.2/release-notes/)
  *     * [Architecture](https://docs.tigergraph.com/tigergraph-server/4.2/intro/internal-architecture)
      * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/4.2/intro/transaction-and-acid)
      * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/4.2/intro/continuous-availability-overview)
  *     * Get Started
      * [Installation](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/)
        * [On Docker](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/docker)
        * [On Linux](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/linux)
          * [Hardware and Software Requirements](https://docs.tigergraph.com/tigergraph-server/4.2/installation/hw-and-sw-requirements)
          * [Linux On Bare Metal](https://docs.tigergraph.com/tigergraph-server/4.2/installation/bare-metal-install)
          * [Post Install Checks](https://docs.tigergraph.com/tigergraph-server/4.2/installation/post-install-check)
        * [On Kubernetes](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/kubernetes)
        * [On Cloud Marketplace](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/cloud-images/)
          * [AWS](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/cloud-images/aws)
          * [Azure](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/cloud-images/azure)
          * [GCP](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/cloud-images/gcp)
        * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/4.2/installation/license)
        * [Changing Ports](https://docs.tigergraph.com/tigergraph-server/4.2/installation/change-port)
        * [Change IP or Hostname](https://docs.tigergraph.com/tigergraph-server/4.2/installation/change-ip-or-hostname)
        * [Upgrade](https://docs.tigergraph.com/tigergraph-server/4.2/installation/upgrade)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/4.2/installation/uninstallation)
      * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/4.2/gsql-shell/)
        * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/4.2/gsql-shell/gsql-sessions)
        * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/4.2/gsql-shell/using-a-remote-gsql-client)
        * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/4.2/gsql-shell/)
  *     * [Clustering](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/)
      * Cluster Resizing
        * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/expand-a-cluster)
        * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/shrink-a-cluster)
        * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/repartition-a-cluster)
        * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/remove-failed-node)
        * [Replace a Node](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/how_to-replace-a-node-in-a-cluster)
      * [Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/crr-index)
        * [Set Up Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/set-up-crr)
        * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/fail-over)
        * [Troubleshooting CRR](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/troubleshooting)
        * [Cross-Region Replication FAQ](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/crr-faq)
      * [High Availability](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/ha-overview)
        * [High Availability Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/ha-cluster)
        * [Region Aware Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/region-aware)
        * [GSQL Server HA](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/ha-for-gsql-server)
        * [Application Server HA](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/ha-for-application-server)
      * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/4.2/cluster-and-ha-management/cluster-commands)
  *     * [Set Up Data Connectors](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/)
      * [Overview](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/data-loading-overview)
      * [Load from Local Files](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-local-files)
      * [from Cloud Storage](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-from-cloud)
      * [from Data Warehouse](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-from-warehouse)
      * [from External Kafka](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-from-kafka)
        * [Avro Data Validation](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/avro-validation-with-kafka)
        * [Kafka SSL Security Guide](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/kafka-ssl-security-guide)
      * [from Spark](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/load-from-spark-dataframe)
      * [to Spark](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/read-to-spark-dataframe)
      * [Externalize Kafka Configs](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/externalizing-kafka-configs)
      * [Manage Data Sources](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/manage-data-source)
      * [Data Loading V2 (Beta)](https://docs.tigergraph.com/tigergraph-server/4.2/data-loading/data-loading-v2)
  *     * [Querying](https://docs.tigergraph.com/tigergraph-server/4.2/data-querying/README)
      * [Define a Graph Schema](https://docs.tigergraph.com/tigergraph-server/4.2/getting-started/database-definition)
  *     * [Manage Your Database](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/)
      * [GADMIN Utility](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/management-commands)
      * [Access Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/)
        * Authentication
          * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/enabling-user-authentication)
          * [User Credentials](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/user-credentials)
          * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/sso)
          * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/ldap)
          * [OIDC JWT Authentication](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/jwt-token)
        * Authorization
          * [User Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/user-management)
          * [Access Control Model](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/access-control-model)
          * [Fine-Grained Query Privileges](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/fine-grained-query-privileges)
            * [Migrate Query Privileges from 3.x to 4.1](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/query-privilege-migration)
          * [Role Management](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/role-management)
          * [Row Policies](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/row-policy-overview)
            * [Key Concepts](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/rbac-row-policy)
            * [Set Up Row Policy](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/setup-row-policy)
          * [Access Control Lists (ACLs) (Deprecated)](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/acl-management)
      * [Backup and Export](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/)
        * [Backup and Restore Configurations](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/configurations)
        * [Back up a Database Cluster](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/backup-cluster)
        * [Incremental Backup](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/incremental-backup)
        * [Online Backup](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/online-backup)
        * Restore
          * [Restore](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/restore-backup-same)
          * [Restore to a Different Cluster](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/restore-cross-cluster)
          * [Point-in-Time Restore](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/point-in-time-restore)
        * Export/Import
          * [Database Import/Export All Graphs](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/database-import-export)
          * [Import/Export Individual Graphs](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/single-graph-import-export)
        * [Legacy Backup and Restore](https://docs.tigergraph.com/tigergraph-server/4.2/backup-and-restore/gbar-legacy)
        * [Change Data Capture (CDC)](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/change-data-capture/cdc-overview)
          * [CDC Setup](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/change-data-capture/cdc-setup)
          * [CDC Message Examples](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/change-data-capture/cdc-message-example)
          * [CDC Monitoring and Reset](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/change-data-capture/cdc-state-monitoring)
      * [Kubernetes](https://docs.tigergraph.com/tigergraph-server/4.2/kubernetes/)
        * [Kubernetes Operator](https://docs.tigergraph.com/tigergraph-server/4.2/kubernetes/k8s-operator/)
      * [Logs](https://docs.tigergraph.com/tigergraph-server/4.2/troubleshooting/log-files)
      * [Resources and Processes](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/resource-and-process-mgmt)
        * [Memory Management](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/memory-management)
        * [Service Management](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/manage-services)
        * [Workload Management](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/workload-management)
        * [Using gadmin](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/management-with-gadmin)
        * [Metrics Reports](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/system-metrics)
      * [Security](https://docs.tigergraph.com/tigergraph-server/4.2/security/)
        * [Auditing Privileged User Actions](https://docs.tigergraph.com/tigergraph-server/4.2/security/audit-privileged-actions)
        * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/4.2/security/encrypting-connections)
        * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/4.2/security/encrypting-data-at-rest)
        * [File Input Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/gsql-file-input-policy)
        * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/file-output-policy)
        * [Login Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/login-protection)
        * [Password Policy](https://docs.tigergraph.com/tigergraph-server/4.2/security/password-policy)
  *     * References
      * [Best Practices](https://docs.tigergraph.com/tigergraph-server/4.2/additional-resources/best-practice-guides/best-practices-overview)
      * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/4.2/reference/configuration-parameters)
      * [gadmin Commands](https://docs.tigergraph.com/tigergraph-server/4.2/system-management/management-commands)
      * [REST Endpoints](https://docs.tigergraph.com/tigergraph-server/4.2/API/)
        * [GSQL Endpoints](https://docs.tigergraph.com/tigergraph-server/4.2/API/gsql-endpoints)
        * [RESTPP & Infra Endpoints](https://docs.tigergraph.com/tigergraph-server/4.2/API/built-in-endpoints)
        * [Upsert Data](https://docs.tigergraph.com/tigergraph-server/4.2/API/upsert-rest)
      * [RBAC Object-Based Privileges](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/row-policy-privileges-table)
        * [RBAC Row Policy EBNF](https://docs.tigergraph.com/tigergraph-server/4.2/user-access/rbac-row-policy/row-policy-ebnf)
        * [List of Legacy Privilege Syntax](https://docs.tigergraph.com/tigergraph-server/4.2/reference/list-of-privileges)
      * [List of Ports](https://docs.tigergraph.com/tigergraph-server/4.2/reference/ports)
      * [Return codes](https://docs.tigergraph.com/tigergraph-server/4.2/reference/return-codes)
      * [Troubleshooting and FAQs](https://docs.tigergraph.com/tigergraph-server/4.2/troubleshooting/troubleshooting-guide)
      * More References
        * [Compare TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/4.2/intro/comparison-of-editions)
        * [Documentation for Legacy Versions](https://docs.tigergraph.com/tigergraph-server/4.2/additional-resources/legacy-tg-versions)
        * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software)
        * [TigerGraph Glossary](https://docs.tigergraph.com/tigergraph-server/4.2/reference/glossary)
        * [TigerGraph Release And Patch Process](https://docs.tigergraph.com/tigergraph-server/4.2/intro/release-process)


TigerGraph DB 4.2 Pre
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph DB 4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
  * References
  * More References
  * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/4.2/modules/reference/pages/patents-and-third-party-software.adoc)
### Contents
  * [Section 1. List of third-party software in the TigerGraph platform](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_1_list_of_third_party_software_in_the_tigergraph_platform)
  * [Section 2. List of additional third-party software in the TigerGraph Cloud Service interface](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_2_list_of_additional_third_party_software_in_the_tigergraph_cloud_service_interface)
  * [Section 3. Table of license types.](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_3_table_of_license_types)


# Patents and Third Party Software
### Contents
  * [Section 1. List of third-party software in the TigerGraph platform](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_1_list_of_third_party_software_in_the_tigergraph_platform)
  * [Section 2. List of additional third-party software in the TigerGraph Cloud Service interface](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_2_list_of_additional_third_party_software_in_the_tigergraph_cloud_service_interface)
  * [Section 3. Table of license types.](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_3_table_of_license_types)


Patent and Third Party Notice for TigerGraph Platform
U.S. Pat. No. 9953106, 9977837, 10120956, 10803121, 11157560, 11250148, 11263264, 11288315, 11366856, 11410176, 11531706, 11615143, 11762961, 12056107, 12061585, 12117996, 12141203, 12189647. Additional Patents pending.
The TigerGraph software program uses some third-party software components that are licensed under their own terms. The attached notices are provided for information only.
  * Section 1. List of third-party software in the TigerGraph platform.
  * Section 2. List of additional third-party software in the TigerGraph Cloud Service interface.
  * Section 3. Table of license types.


A separate third-party disclosure is available for the GraphStudio Visual SDK. See <https://docs.tigergraph.com/ui/graphstudio/patent-and-third-party-notice>
## [](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_1_list_of_third_party_software_in_the_tigergraph_platform)Section 1. List of third-party software in the TigerGraph platform
antlr Copyright (c) 2014 antlr. [https://www.antlr.org/](https://www.antlr.org) Licensed under BSD3
commons-cli Copyright (c) 2002-2017 The Apache Software Foundation. <https://commons.apache.org/proper/commons-cli/> Licensed under Apache2
commons-codec Copyright (c) 2002-2017 The Apache Software Foundation. <https://commons.apache.org/proper/commons-codec/> Licensed under Apache2
commons-lang3 Copyright (c) 2001-2018 The Apache Software Foundation. <https://commons.apache.org/proper/commons-lang/> Licensed under Apache2
diffutils Copyright (c) 2010 Free Software Foundation. <https://github.com/java-diff-utils/java-diff-utils> Licensed under Apache2
grpc Copyright (c) 2018 The gRPC authors. [https://grpc.io/](https://grpc.io) Licensed under Apache2
guava Copyright (c) 2010-2016 OneLogin, Inc. https://github.com/google/guava Licensed under Apache2
java-saml Copyright (c) 2010-2016 OneLogin, Inc. https://github.com/onelogin/java-saml Licensed under MIT
jline Copyright (c) 2002-2018 Guillaume Nodet. <https://github.com/jline/jline3> Licensed under BSD3
joda-time Copyright (c) 2002-2018 Joda. <https://www.joda.org/joda-time/> Licensed under Apache2
json Copyright (c) 2002 JSON. <https://github.com/stleary/JSON-java> Licensed under JSON
LDAP SDK Copyright (c) 2009 Ping Identity Corporation. <https://github.com/pingidentity/ldapsdk/blob/master/README.md> Licensed under LDAPSDK
log4j Copyright (c) 1999-2018 The Apache Software Foundation. <https://logging.apache.org/log4j/2.x/> Licensed under Apache2
netty Copyright (c) 2018 The Netty Project. [https://netty.io/](https://netty.io) Licensed under Apache2
protobuf-java Copyright (c) 2008 Google. <https://developers.google.com/protocol-buffers/> Licensed under BSD3
slf4j Copyright (c) 2004-2017 QOS.ch. [https://www.slf4j.org/](https://www.slf4j.org) Licensed under MIT
stax2-api Copyright (c) 2013-2019 Tatu Saloranta. <https://github.com/FasterXML/stax2-api> Licensed under BSD
woodstox-core-asl Copyright (c) 2014-2019 Tatu Saloranta. <https://github.com/FasterXML/woodstox> Licensed under Apache2
xmlsec Copyright (c) 2002-2016 Aleksey Sanin. <https://www.aleksey.com/xmlsec/> Licensed under MIT
yamlbeans Copyright (c) 2008 Nathan Sweet. <https://github.com/EsotericSoftware/yamlbeans> Licensed under MIT
zookeeper Copyright (c) 2010-2018 The Apache Software Foundation. [https://zookeeper.apache.org/](https://zookeeper.apache.org) Licensed under Apache2
gson Copyright (c) 2008-2019 Google. <https://github.com/google/gson> Licensed under Apache2
javacc Copyright (c) 2006 Sun Microsystems. [https://javacc.org/](https://javacc.org) Licensed under BSD3
javacpp Copyright (c) 1989 Ty Coon. <https://github.com/bytedeco/javacpp> Licensed under Apache
murmurhash Copyright (c) 2010-2019 aapleby. <https://github.com/aappleby/smhasher> Licensed under MIT
kafka Copyright (c) 2017 The Apache Software Foundation. [https://kafka.apache.org/](https://kafka.apache.org) Licensed under Apache2
librdkafka Copyright (c) 2012-2018 Magnus Edenhill. <https://github.com/edenhill/librdkafka> Licensed under BSD2
libfcgi Copyright (c) 2012-2019 toshic. <https://github.com/toshic/libfcgi> Licensed under FCGI
zlib Copyright (c) 1995-2017 Jean-loup Gailly. [https://zlib.net/](https://zlib.net) Licensed under ZLIB
libcurl Copyright (c) 1996-2019 Daniel Stenberg. <https://curl.haxx.se/libcurl/> Licensed under CURL
zeromq Copyright (c) 2007-2016 various copyright holders. [http://zeromq.org/](http://zeromq.org) Licensed under LGPL3 with static linking exception: permission is granted to link this library with independent modules to produce an executable, regardless of the license terms of these independent modules, and to copy and distribute the resulting executable under terms of your choice.
libhttp_parser Copyright (c) 2009-2019 Joyent. <https://github.com/nodejs/http-parser> Licensed under MIT
yaml-cpp Copyright (c) 2008-2015 Jesse Beder. <https://github.com/jbeder/yaml-cpp> Licensed under MIT
cryptopp Copyright (c) 1995-2016 Wei Dai. [https://www.cryptopp.com/](https://www.cryptopp.com) Licensed under BOOST
boost Copyright (c) 1998-2005 Beman Dawes, David Abrahams. [https://www.boost.org/](https://www.boost.org) Licensed under BOOST
snappy Copyright (c) 2011 Google, Inc. https://github.com/google/snappy Licensed under BSD3
jsoncpp Copyright (c) 2007-2010 Baptiste Lepilleur. <https://github.com/open-source-parsers/jsoncpp> Licensed under MIT
cereal Copyright (c) 2014 Randolph Voorhies, Shane Grant. <https://github.com/USCiLab/cereal> Licensed under BSD3
nginx Copyright (c) 2011-2018 nginx. [http://nginx.org/](http://nginx.org) Licensed under BSD2
jemalloc Copyright (c) 2002-2018 Jason Evans, (c) 2007-2012 Mozilla Foundation, (c) 2009-2018 Facebook, Inc. http://jemalloc.net[<http://jemalloc.net/>] Licensed under BSD2
sparsehash Copyright (c) 2005 Google. <https://github.com/sparsehash/sparsehash> Licensed under BSD3
rapidjson Copyright (c) 2006-2013 Alexander Chemeris. <https://github.com/Tencent/rapidjson> Licensed under MIT
openjdk Copyright (c) 2019 Oracle. [https://openjdk.java.net/](https://openjdk.java.net) Licensed under GPL2+CE GPL2 with Classpath Exception: Clarification that the using the licensed code with other code does not require that other code to be GPL2 compatible.
gcc Copyright (c) 1992-2017 Free Software Foundation. [https://gcc.gnu.org/](https://gcc.gnu.org) (gcc) Licensed under GPL3, with Runtime Library Exception The GCC license provides an exception to GPLv3 to allow compilation of non- GPL (including proprietary) programs to use, in this way, the header files and runtime libraries covered by this Exception. The complete terms are available at <https://www.gnu.org/licenses/gcc-exception.html>
tsar Copyright (c) 2004 Apache. <https://github.com/alibaba/tsar> Licensed under Apache2
gperftools Copyright (c) 2005 Google. <https://github.com/gperftools/gperftools> (we use its tcmalloc) Licensed under BSD3
python 2.7 Copyright (c) 2001-2019 Python. <https://www.python.org/download/releases/2.7/license/> Licensed under Python2
Go [github.com/GeertJohan/go.rice/embedded](http://github.com/GeertJohan/go.rice/embedded) Licensed under BSD 2-clause ``Simplified'' License
Gabs [github.com/Jeffail/gabs](http://github.com/Jeffail/gabs) Licensed under MIT License
Sarama [github.com/Shopify/sarama](http://github.com/Shopify/sarama) Licensed under MIT License
Go Meta Linter [github.com/alecthomas/gometalinter](http://github.com/alecthomas/gometalinter) Licensed under MIT License
Units [github.com/alecthomas/units](http://github.com/alecthomas/units) Licensed under MIT License
Quantile [github.com/beorn7/perks/quantile](http://github.com/beorn7/perks/quantile) Licensed under MIT License
Readline [github.com/chzyer/readline](http://github.com/chzyer/readline) Licensed under MIT License
Misspell [github.com/client9/misspell/cmd/misspell](http://github.com/client9/misspell/cmd/misspell) Licensed under MIT License
Client V3 [github.com/coreos/etcd/clientv3](http://github.com/coreos/etcd/clientv3) Licensed under Apache License 2.0
Journal [github.com/coreos/go-systemd/journal](http://github.com/coreos/go-systemd/journal) Licensed under Apache License 2.0
Capnslog [github.com/coreos/pkg/capnslog](http://github.com/coreos/pkg/capnslog) Licensed under Apache License 2.0
Zip [github.com/daaku/go.zipexe](http://github.com/daaku/go.zipexe) Licensed under MIT License
Spew [github.com/davecgh/go-spew/spew](http://github.com/davecgh/go-spew/spew) Licensed under ISC License
JWT [github.com/dgrijalva/jwt-go](http://github.com/dgrijalva/jwt-go) Licensed under MIT License
Breaker [github.com/eapache/go-resiliency/breaker](http://github.com/eapache/go-resiliency/breaker) Licensed under MIT License
Go xerial snappy [github.com/eapache/go-xerial-snappy](http://github.com/eapache/go-xerial-snappy) Licensed under MIT License
Queue [github.com/eapache/queue](http://github.com/eapache/queue) Licensed under MIT License
Color [github.com/fatih/color](http://github.com/fatih/color) Licensed under MIT License
Gorp [github.com/go-gorp/gorp](http://github.com/go-gorp/gorp) Licensed under MIT License
Oleutil [github.com/go-ole/go-ole/oleutil](http://github.com/go-ole/go-ole/oleutil) Licensed under MIT License
Protobuf [github.com/gogo/protobuf](http://github.com/gogo/protobuf) Licensed under BSD 3-clause "New" or "Revised" License
Go Lint [github.com/golang/lint/golint](http://github.com/golang/lint/golint) Licensed under BSD 3-clause "New" or "Revised" License
Snappy [github.com/golang/snappy](http://github.com/golang/snappy) Licensed under BSD 3-clause "New" or "Revised" License
Renameio [github.com/google/renameio](http://github.com/google/renameio) Licensed under Apache License 2.0
RocksDB <https://github.com/facebook/rocksdb/> Licensed under Apache License 2.0
Shlex [github.com/google/shlex](http://github.com/google/shlex) Licensed under Apache License 2.0
UUID [github.com/google/uuid](http://github.com/google/uuid) Licensed under BSD 3-clause "New" or "Revised" License
Ineffassign [github.com/gordonklaus/ineffassign](http://github.com/gordonklaus/ineffassign) Licensed under MIT License
Backoffutils [github.com/grpc-ecosystem/go-grpc-middleware/util/backoffutils](http://github.com/grpc-ecosystem/go-grpc-middleware/util/backoffutils) Licensed under Apache License 2.0
Prometheus [github.com/grpc-ecosystem/go-grpc-prometheus](http://github.com/grpc-ecosystem/go-grpc-prometheus) Licensed under Apache License 2.0
GRPC-gateway [github.com/grpc-ecosystem/grpc-gateway](http://github.com/grpc-ecosystem/grpc-gateway) Licensed under BSD 3-clause "New" or "Revised" License
Go-uuid [github.com/hashicorp/go-uuid](http://github.com/hashicorp/go-uuid) Licensed under Mozilla Public License 2.0
Go-fork [github.com/jcmturner/gofork](http://github.com/jcmturner/gofork) Licensed under BSD 3-clause "New" or "Revised" License
Ansiterm [github.com/juju/ansiterm](http://github.com/juju/ansiterm) Licensed under GNU Lesser General Public License v3.0
Tabwriter [github.com/juju/ansiterm/tabwriter](http://github.com/juju/ansiterm/tabwriter) Licensed under BSD 3-clause "New" or "Revised" License
Compress [github.com/klauspost/compress](http://github.com/klauspost/compress) Licensed under BSD 3-clause "New" or "Revised" License
Xxhash [github.com/klauspost/compress/zstd/internal/xxhash](http://github.com/klauspost/compress/zstd/internal/xxhash) Licensed under MIT License
fs [github.com/kr/fs](http://github.com/kr/fs) Licensed under BSD 3-clause "New" or "Revised" License
Pretty [github.com/kr/pretty](http://github.com/kr/pretty) Licensed under MIT License
Text [github.com/kr/text](http://github.com/kr/text) Licensed under MIT License
Vtclean [github.com/lunixbochs/vtclean](http://github.com/lunixbochs/vtclean) Licensed under MIT License
Go-colorable [github.com/mattn/go-colorable](http://github.com/mattn/go-colorable) Licensed under MIT License
Go-isatty [github.com/mattn/go-isatty](http://github.com/mattn/go-isatty) Licensed under MIT License
Go-sqlite3 [github.com/mattn/go-sqlite3](http://github.com/mattn/go-sqlite3) Licensed under MIT License
Pbutil [github.com/matttproud/golang_protobuf_extensions/pbutil](http://github.com/matttproud/golang_protobuf_extensions/pbutil) Licensed under Apache License 2.0
i18n [github.com/nicksnyder/go-i18n/i18n](http://github.com/nicksnyder/go-i18n/i18n) Licensed under MIT License
Go-toml [github.com/pelletier/go-toml](http://github.com/pelletier/go-toml) Licensed under MIT License
xxh32 [github.com/pierrec/lz4/internal/xxh32](http://github.com/pierrec/lz4/internal/xxh32) Licensed under BSD 3-clause "New" or "Revised" License
errors [github.com/pkg/errors](http://github.com/pkg/errors) Licensed under BSD 2-clause ``Simplified'' License
sftp [github.com/pkg/sftp](http://github.com/pkg/sftp) Licensed under BSD 2-clause ``Simplified'' License
difflib [github.com/pmezard/go-difflib/difflib](http://github.com/pmezard/go-difflib/difflib) Licensed under BSD 3-clause "New" or "Revised" License
Go [github.com/prometheus/client_model/go](http://github.com/prometheus/client_model/go) Licensed under Apache License 2.0
Common [github.com/prometheus/common](http://github.com/prometheus/common) Licensed under Apache License 2.0
Procfs [github.com/prometheus/procfs](http://github.com/prometheus/procfs) Licensed under Apache License 2.0
Go-metrics [github.com/rcrowley/go-metrics](http://github.com/rcrowley/go-metrics) Licensed under BSD 2-clause ``Simplified'' License
Cron [github.com/robfig/cron](http://github.com/robfig/cron) Licensed under MIT License
Gopsutil [github.com/shirou/gopsutil](http://github.com/shirou/gopsutil) Licensed under BSD 3-clause "New" or "Revised" License
W32 [github.com/shirou/w32](http://github.com/shirou/w32) Licensed under BSD 3-clause "New" or "Revised" License
Cobra [github.com/spf13/cobra](http://github.com/spf13/cobra) Licensed under Apache License 2.0
Pflag [github.com/spf13/pflag](http://github.com/spf13/pflag) Licensed under BSD 3-clause "New" or "Revised" License
Testify [github.com/stretchr/testify](http://github.com/stretchr/testify) Licensed under MIT License
Promptui [github.com/tigergraph/promptui](http://github.com/tigergraph/promptui) Licensed under BSD 3-clause "New" or "Revised" License
Deadcode [github.com/tsenart/deadcode](http://github.com/tsenart/deadcode) Licensed under BSD 3-clause "New" or "Revised" License
Etcd [go.etcd.io/etcd](http://go.etcd.io/etcd) Licensed under Apache License 2.0
Atomic [go.uber.org/atomic](http://go.uber.org/atomic) Licensed under MIT License
Multierr [go.uber.org/multierr](http://go.uber.org/multierr) Licensed under MIT License
Zap [go.uber.org/zap](http://go.uber.org/zap) Licensed under MIT License
Crypto <https://pkg.go.dev/golang.org/x/crypto> Licensed under BSD 3-clause "New" or "Revised" License
Golint <https://pkg.go.dev/golang.org/x/lint/golint> Licensed under BSD 3-clause "New" or "Revised" License
Net <https://pkg.go.dev/golang.org/x/text> Licensed under BSD 3-clause "New" or "Revised" License
Errgroup <https://pkg.go.dev/golang.org/x/sync/errgroup> Licensed under BSD 3-clause "New" or "Revised" License
Sys <https://pkg.go.dev/golang.org/x/sys> Licensed under BSD 3-clause "New" or "Revised" License
Text <https://pkg.go.dev/golang.org/x/text> Licensed under BSD 3-clause "New" or "Revised" License
Genproto <https://pkg.go.dev/google.golang.org/genproto> Licensed under Apache License 2.0
Grpc <https://pkg.go.dev/google.golang.org/grpc> Licensed under Apache License 2.0
Check.v1 [gopkg.in/check.v1](http://gopkg.in/check.v1) Licensed under BSD 2-clause ``Simplified'' License
Aescts.v1 [gopkg.in/jcmturner/aescts.v1](http://gopkg.in/jcmturner/aescts.v1) Licensed under Apache License 2.0
dnsutils.v1 [gopkg.in/jcmturner/dnsutils.v1](http://gopkg.in/jcmturner/dnsutils.v1) Licensed under Apache License 2.0
gokrb5.v7 [gopkg.in/jcmturner/gokrb5.v7](http://gopkg.in/jcmturner/gokrb5.v7) Licensed under Apache License 2.0
rpc.v1 [gopkg.in/jcmturner/rpc.v1](http://gopkg.in/jcmturner/rpc.v1) Licensed under Apache License 2.0
jack.v2 [gopkg.in/natefinch/lumberjack.v2](http://gopkg.in/natefinch/lumberjack.v2) Licensed under MIT License
yaml.v2 [gopkg.in/yaml.v2](http://gopkg.in/yaml.v2) Licensed under Apache License 2.0
Go Programming Language [cloud.google.com/go](http://cloud.google.com/go) Licensed under Apache2
go-semver [github.com/coreos/go-semver](http://github.com/coreos/go-semver) Licensed under Apache2
Resty [github.com/go-resty/resty](http://github.com/go-resty/resty) Licensed under MIT license
flock [github.com/gofrs/flock](https://github.com/gofrs/flock) Licensed under BSD 3-clause "New" or "Revised" License
protobuf [github.com/golang/protobuf](http://github.com/golang/protobuf) Licensed under BSD 3-clause "New" or "Revised" License
client_golang [github.com/prometheus/client_golang](http://github.com/prometheus/client_golang) Licensed under Apache2
net [golang.org/x/net](http://golang.org/x/net) Licensed under BSD 3-clause "New" or "Revised" License
### [](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_2_list_of_additional_third_party_software_in_the_tigergraph_cloud_service_interface)Section 2. List of additional third-party software in the TigerGraph Cloud Service interface
The TigerGraph Cloud Service permits users to use the TigerGraph graph database and analytics platform via a web interface. TigerGraph does not copy or distribute the TigerGraph Cloud software to the end user.
In additional to having the third-party components of the TigerGraph Platform, the TigerGraph Cloud Service interface includes the following additional third-party software.
Netdata Copyright (c) 2016-2018, Costa Tsaousis. Copyright (c) 2018, Netdata Inc. https://github.com/netdata/netdata Licensed under [GPL v3 or later](https://github.com/netdata/netdata/tree/master/LICENSE).
## [](https://docs.tigergraph.com/tigergraph-server/4.2/reference/patents-and-third-party-software#_section_3_table_of_license_types)Section 3. Table of license types.
The following table explains the license abbreviations used in the list of TigerGraph Third Party Software. A link is provided to an official source for each license.
Abbreviation | License Name and Source  
---|---  
Apache2 | Apache License version 2.0 <https://www.apache.org/licenses/LICENSE-2.0>  
BOOST | Boost Software License <http://www.boost.org/LICENSE_1_0.txt>  
BSD2 | 2-Clause BSD (Berkeley Standard Distribution) License <https://opensource.org/licenses/BSD-2-Clause>  
BSD3 | 3-Clause BSD (Berkeley Standard Distribution) License <https://opensource.org/licenses/BSD-3-Clause>  
CURL | Curl License <https://curl.haxx.se/docs/copyright.html>  
FCGI | FastCGI2 License <https://github.com/FastCGI-Archives/fcgi2/blob/master/LICENSE.TERMS>  
GPL2 | GNU General Public License version 2.0 <https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html>  
GPL2+CE | GNU General Public License, version 2, with the Classpath Exception <https://openjdk.java.net/legal/gplv2+ce.html>  
GNU | General Public License version 3.0 <https://www.gnu.org/licenses/gpl-3.0.en.html>  
ISC | ISC License <https://opensource.org/licenses/ISC>  
JSON | JSON License <http://www.json.org/license.html>  
LDAPSDK | UnboundID LDAP SDK Free Use License <https://docs.ldap.com/ldap-sdk/docs/LICENSE-UnboundID-LDAPSDK.txt>  
LGPL3 | GNU Lesser General Public License version 3.0 <https://www.gnu.org/licenses/lgpl-3.0.en.html>  
MIT | MIT (Massachusetts Institute of Technology) License <https://opensource.org/licenses/MIT>  
Mozilla | Mozilla Public License 2.0 <https://www.mozilla.org/en-US/MPL/2.0/>  
MPICH | MPICH License <http://git.mpich.org/mpich.git/blob/HEAD:/COPYRIGHT>  
OPENSSL | OpenSSL License <https://www.openssl.org/source/license.html>  
Python2 | Python 2.7 License <https://www.python.org/download/releases/2.7/license/>  
SLI_OFL1.1 | SIL Open Font License version 1.1 <http://scripts.sil.org/cms/scripts/page.php?item_id=OFL_web>  
ZLIB | zlib License <https://www.zlib.net/zlib_license.html>  
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


